# libqif

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.pl  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  compile.sh  create_documentation.sh  create_new_libqif_version.sh  format-code.sh  genindex.html  index.html  installing_needeed_libs.sh  invert  invert.cpp  lib_header.txt  objects.inv  py-modindex.html  run_tests.sh  search.html  searchindex.js  versions.txt
QIF/: .Graph.pm.swp  .swp  Channel.pm  Compare.pm  Corners.pm  Graph.pm  LinearProgram.pm  LocationSet.pm  Matrix.pm  Mechanism.pm  Minvuln.pm
_autosummary/: qif.channel.html  qif.lp.html  qif.measure.html  qif.mechanism.html  qif.metric.html  qif.probab.html  qif.refinement.html  qif.utility.html
doxygen/: Doxyfile  Doxyfile.in  init  mainpage.dox
examples/: minvuln.pl
geo_cpp/: .laplace.cpp.swp  compile  geo  geo.cpp  tc-results-100  tc-results-50  tc-results-60  tc-results-70  tc-results-80  tc-results-90
inc/: Channel.h  EntropyModel.h  GLeakage.h  Gain.h  Graph.h  Guessing.h  LinearProgram.h  Mechanism.h  MinEntropy.h  Prob.h  Shannon.h  types.h
include/: Chan.h  Channel.h  EntropyModel.h  GLeakage.h  Gain.h  Graph.h  Guessing.h  LeakageMeasure.h  LinearProgram.h  Mechanism.h  Metric.h  MinEntropy.h  PlanarLaplace.h  Prob.h  Rational.h  Shannon.h  aux.h  precompiled.h  precompiled_tests.h  pybind11_aux.h  qif  rat.h  tests_aux.h  types.h  utility.h
lib/: CMakeLists.txt
lib/include/: qif
lib/include/qif_bits/: LinearProgram.h  arma_rat.h  channel.h  config.h  lib_aux.h  metric.h  metric_opt.h  probab.h  range.hpp  refinement.h  types.h  utility.h
lib/include/qif_bits/measure/: bayes_risk.h  bayes_vuln.h  d_priv.h  d_privacy.h  g_vuln.h  l_risk.h  pred_risk.h  pred_vuln.h  shannon.h
lib/include/qif_bits/mechanism/: bayes_risk.h  bayes_vuln.h  d_priv.h  d_privacy.h  g_vuln.h  l_risk.h  planar_geometric.h  planar_laplace.h  shannon.h
lib/include/qif_bits/metric/: optimize.h
lib/src/: planar_laplace.cpp  wrapper.cpp
lib_cpp/: CMakeLists.txt
lib_cpp/include/: precompiled.h
lib_cpp/include/qif_bits/: LinearProgram.h  arma_rat.h  channel.h  games.h  gowalla.h  lib_aux.h  metric.h  miniball  osqp  probab.h  refinement.h  wrapper.h
lib_cpp/include/qif_bits/channel/: compose.h
lib_cpp/include/qif_bits/measure/: bayes_risk.h  guessing.h  l_risk.h  shannon.h
lib_cpp/include/qif_bits/mechanism/: d_privacy.h  l_risk.h  planar_geometric.h  planar_laplace.h  shannon.h
lib_cpp/include/qif_bits/metric/: optimize.h
lib_cpp/src/: QuadraticProgram.cpp  gowalla.cpp
lib_python/: CMakeLists.txt  setup.py
misc/: Common.cmake  Findortools.cmake  PrecompiledHeader.cmake
misc/docs/: CMakeLists.txt  conf.py  index.rst
misc/docs/_templates/: template.rst
misc/doxygen/: CMakeLists.txt  Doxyfile.in
python/: CMakeLists.txt  MANIFEST.in  qif.cpp  setup.py
python/cmake/: Common.cmake  GlobalConfig.cmake  QifConfig.cmake
python/include/: pybind11_aux.h
python/qif/: CMakeLists.txt  __init__.py  channel.cpp  metric.cpp  probab.cpp
python/tests/: test.py
python_lib/: CMakeLists.txt  setup.py
python_lib/include/: pybind11_aux.h
python_lib/src/: qif.cpp
python_lib/src/qif/: channel.cpp  measure.cpp  mechanism.cpp  metric.cpp  probab.cpp  refinement.cpp  utility.cpp
python_lib/src/qif/channel/: compose.cpp
python_lib/src/qif/measure/: bayes_risk.cpp  bayes_vuln.cpp  d_privacy.cpp  g_vuln.cpp  guessing.cpp  l_risk.cpp  pred_risk.cpp  pred_vuln.cpp  shannon.cpp
python_lib/src/qif/mechanism/: bayes_risk.cpp  bayes_vuln.cpp  d_privacy.cpp  g_vuln.cpp  geo.cpp  geo_ind.cpp  l_risk.cpp  shannon.cpp
python_lib/src/qif/metric/: optimize.cpp
samples/: AnotherLIBQIFExample.cpp  CMakeLists.txt  DifferentialPrivacyExample.cpp  GLeakageCaseStudy1.cpp  GLeakageCaseStudy2.cpp  Main.cpp  arma_example.cpp  compile_sample.sh  elastic.cpp  programa1  programaAr  programaArma  usando_armadillo.cpp
samples/adverror_test/: paris-gowalla-global.csv  test1.cpp
samples/crowds/: crowds.cpp  crowds.plt  repeated.plt
samples/dist_optimal/: dist_optimal.cpp
samples/dummy/: dp.cpp  gleakage1.cpp  gleakage2.cpp  main.cpp
samples/elastic/: elastic.cpp
samples/geo-optimal/: geo-optimal.cpp
samples/geo-optimal-given-min-bayes-risk/: geo-optimal-given-min-bayes-risk.cpp
samples/leakage-games-GameSec17/: games.cpp
samples/linearprogram/: lp.cpp
samples/optimal-ValueTools17/: optimal.cpp  optimal_multi_R.cpp  plots.py
samples/practical_mech/: practical_mech.cpp
samples/qif-ml/: generate-gowalla-data.cpp
samples/remap/: remap.cpp
samples/semantic/: README.md  graph_foursquare.py  test_foursquare.cpp
samples/semantic/generated_data_foursquare/: README.md
samples/semantic/preproc_foursquare/: foursquare_preproc.py  init.py  main.py  utils.py
samples/semantic/preproc_foursquare/datasets/: README.md
samples/semantic/temp_foursquare/: README.md
sci_files/: 2dcond_entropy.sci  2dleakage.sci  2dvulnerability.sci  3dcond_vulnerability.sci  3dentropy.sci
src/: Channel.cpp  EntropyModel.cpp  GLeakage.cpp  Gain.cpp  Graph.cpp  Guessing.cpp  LeakageMeasure.cpp  LinearProgram.cpp  Mechanism.cpp  (+9 more)
tests/: CMakeLists.txt  Channel.cpp  ChannelTest.cc  EntropyModel.cpp  EntropyModelTest.cc  GLeakage.cpp  GLeakageTest.cc  Gain.cpp  GainTest.cc  Graph.cpp  GraphTest.cc  Guessing.cpp  GuessingTest.cc  LeakageMeasure.cpp  LinearProgram.cpp  LinearProgramTest.cc  Mechanism.cpp  MechanismTest.cc  Metric.cpp  MinEntropy.cpp  MinEntropyTest.cc  Misc.cpp  Prob.cpp  ProbTest.cc  QuadraticProgram.cpp  Shannon.cpp  ShannonTest.cc  bayes.cpp  bayes_risk.cpp  bayes_vuln.cpp  channel.cpp  d_priv.cpp  g_vuln.cpp  gain.cpp  guessing.cpp  main.cpp  mech_optimal.cpp  mechanism.cpp  metric.cpp  optimal_exp_loss.cpp  (+3 more)
tests/include/: tests_aux.h
tests/measure/: bayes_risk.cpp  bayes_vuln.cpp  d_priv.cpp  g_vuln.cpp  guessing.cpp
tests/mechanism/: d_priv.cpp
tests/src/: channel.cpp  metric.cpp  misc.cpp  probab.cpp
tests/src/measure/: bayes_risk.cpp  shannon.cpp
tests/src/mechanism/: geo.cpp
(+219 files in other folders)
